--- a/CSProsLibrary/CSProsLibrary.csproj
+++ b/CSProsLibrary/CSProsLibrary.csproj
@@ -10,6 +10,10 @@
       <PackageReference Include="DemoFile" Version="0.15.1" />
       <PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
       <PackageReference Include="Npgsql" Version="8.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
